<resources>
    <string name="app_name">DxPlayer</string>
    <string name="title_activity_dash_bord">DashBordActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="files">Files</string>
    <string name="music">Music</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="recently_watched">Recently watched</string>
    <string name="show_more">see more</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_playscreen">Player Screen</string>
    <string name="ad_in_5">Add in 5</string>
    <string name="sub_tittle">Sub tittle</string>
    <string name="favorate">Favourites</string>
    <string name="play_lists">Play Lists</string>
    <string name="recently_played">Recently Played</string>
    <string name="tittle">tittle</string>
    <string name="playListName">PlayList name</string>
    <string name="add_songs">Add songs</string>
    <string name="clear_history">Clare History</string>
    <string name="delete">Delete</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="cancel">Cancel</string>
    <string name="no_items_yet">No items yet  add songs to playList</string>

    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
</resources>